# webfs

./: .env.example  .gitignore  .golangci-editor.yml  LICENSE  README.md  adapter.go  factory.go  go.mod  go.sum  interfaces.go  main.py  node.go  pyproject.toml  request.go  requests.go  webfs.go
adapters/: builtins.go  http.go  http_test.go  registry.go  registry_test.go
api/: filesystem.go
cmd/: main.go
config/: config.go  config_test.go  constants.go  constants.py  mount.go
examples/: pub_sources.json
filesystem/: consts.go  context.go  fs.go  fs_test.go  inode.go  inode_test.go  node.go  node_test.go
fs/: filesystem.go
fuse/: server.go
internal/core/: consts.go  context.go  fs.go  fuse.go  inode.go  node.go  server.go  webfs.go
internal/filesystem/: fs.go
internal/fs/: fs.go  fuse.go
internal/mocks/: adapter.go
internal/nodes/: consts.go  inode.go  node.go  source.go
internal/util/: logger.go  util.go
python/: main.py
python/shared/: requests.py
python/tests/fixtures/: pub_sources.json
python/utils/: fetch_utils.py  file_utils.py  logger.py
requests/: dto.go  unmarshal.go
server/: webfs.go
shared/: files.py
test/e2e/: e2e_test.go  init-delve.txt
util/: logger.go
