[project]
name = "easydebrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "cachetools>=5.5.2",
    "debugpy>=1.8.13",
    "llfuse>=1.5.1",
    "requests>=2.32.3",
]

# [tool.pyright]
# venvPath = '.'
# venv = ".venv"
# exclude = ['.venv']
